--- a/app/src/main/res/layout/dialog_change_bar_details.xml
+++ b/app/src/main/res/layout/dialog_change_bar_details.xml
@@ -18,6 +18,11 @@
         android:textColor="#555B6E"
         android:textSize="19sp"
         android:textStyle="bold" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="7dp"
+        android:background="#6CA19C9C" />
 
 
             <RelativeLayout
