--- a/app/src/main/res/layout/list_review.xml
+++ b/app/src/main/res/layout/list_review.xml
@@ -13,12 +13,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#FAF9F9">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/listReview_IMG_reviewer"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="5dp"
             android:src="@drawable/ic_user"
             android:scaleType="centerCrop"
             app:civ_border_color="#555B6E"
@@ -38,7 +41,7 @@
                 android:layout_marginTop="5dp"
                 android:text="yao cho"
                 android:textColor="#555B6E"
-                android:textSize="19sp"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <RatingBar
@@ -62,7 +65,7 @@
                 android:padding="3dp"
                 android:text="it was great"
                 android:textColor="#555B6E"
-                android:textSize="17sp" />
+                android:textSize="14sp" />
 
 
         </LinearLayout>
