--- a/app/src/main/res/layout/activity_bar_tables.xml
+++ b/app/src/main/res/layout/activity_bar_tables.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Activity_bar_account">
+    tools:context=".activities.business_account.Activity_bar_account">
 
     <ImageView
         android:id="@+id/bar_tables_IMG_background"
@@ -106,25 +106,104 @@
             </LinearLayout>
 
         </LinearLayout>
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="25dp"
+            >
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/bar_tables_TXT_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/comfortaa_bold"
-                android:layout_marginTop="25dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginStart="20dp"
                 android:text="Your Tables:"
                 android:textColor="#555B6E"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/bar_tables_BTN_show_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FF577F"
+            android:clickable="true"
+            app:borderWidth="0dp"
+            app:cornerRadius="15dp"
+            android:text="All tables"
+            android:textColor="#FAF9F9"
+            app:tint="#555B6E"
+            app:useCompatPadding="false" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/comfortaa_bold"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="20dp"
+                android:text="see orders"
+                android:textColor="#555B6E"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/bar_tables_FAB_addTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:backgroundTint="#FF577F"
+                android:clickable="true"
+                app:borderWidth="0dp"
+                app:fabCustomSize="50dp"
+                app:srcCompat="@drawable/ic_time"
+                app:tint="#555B6E"
+                app:useCompatPadding="false" />
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:elevation="7dp"
+                app:cardBackgroundColor="#555B6E"
+                app:cardCornerRadius="30dp"
+                app:cardElevation="7dp">
+
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/bar_tables_LBL_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/comfortaa_bold"
+                    android:gravity="center"
+                    android:text="-- : --"
+                    android:textColor="#FF577F"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+
+        </LinearLayout>
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/bar_tables_LST_tables"
             android:layout_width="match_parent"
-            android:layout_height="800dp"
+            android:layout_height="500dp"
             android:layout_margin="5dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
