--- a/app/src/main/res/layout/activity_create_bar.xml
+++ b/app/src/main/res/layout/activity_create_bar.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Activity_create_bar">
+    tools:context=".activities.business_account.Activity_create_bar">
 
     <include
         android:id="@+id/app_top_main"
