--- a/app/src/main/res/layout/activity_follow_bar.xml
+++ b/app/src/main/res/layout/activity_follow_bar.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.private_account.Activity_customer_main_page">
+    tools:context=".activities.private_account.Activity_follow_bar">
 
 
     <ImageView
@@ -14,7 +15,6 @@
         android:background="#FAF9F9"
         android:scaleType="fitCenter"
         android:src="@drawable/img_background" />
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -31,20 +31,18 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:id="@+id/LAY"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include
-            android:id="@+id/app_top_main"
-            layout="@layout/app_top_bar" />
+    <include
+        android:id="@+id/app_top_main"
+        layout="@layout/app_top_bar" />
+
 
         <ScrollView
-            android:id="@+id/scroll"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
+            android:layout_height="match_parent">
 
 
             <LinearLayout
@@ -52,93 +50,62 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="10dp"
                     android:fontFamily="@font/comfortaa_bold"
-                    android:text="Hot Today:"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="15dp"
+                    android:drawableStart="@drawable/ic_star"
+                    android:drawablePadding="10dp"
+                    android:text="Following"
                     android:textColor="#555B6E"
-                    android:textSize="25sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="5dp"
+                    android:background="#6CA19C9C" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/customer_menu_LST_hot_today"
+                    android:id="@+id/followers_LST_tables"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
+                    android:layout_height="500dp"
+                    android:layout_margin="20dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/customer_menu_LBL_fav1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
                     android:layout_marginTop="25dp"
-                    android:fontFamily="@font/comfortaa_bold"
-                    android:text="Wine Bars:"
-                    android:textColor="#555B6E"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
+                    android:visibility="invisible"
+                    />
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/customer_menu_LST_fab1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/customer_menu_LBL_fav2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="25dp"
-                    android:fontFamily="@font/comfortaa_bold"
-                    android:text="Dance Bars:"
-                    android:textColor="#555B6E"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/customer_menu_LST_fab2"
-                    android:layout_width="match_parent"
-                    android:layout_height="450dp"
-                    android:layout_marginBottom="10dp"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
             </LinearLayout>
+
         </ScrollView>
     </LinearLayout>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="?attr/actionBarSize">
-
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
             android:layout_width="match_parent"
             android:layout_height="75dp"
             android:layout_gravity="bottom"
             app:fabAlignmentMode="center"
+            app:fabCradleRoundedCornerRadius="50dp"
             app:fabCradleMargin="1dp"
-            app:fabCradleRoundedCornerRadius="50dp" />
+            />
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -146,8 +113,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#FF577F"
-            android:src="@drawable/ic_search"
             app:borderWidth="0dp"
+            android:src="@drawable/ic_search"
             app:layout_anchor="@id/bottom_app_bar"
             app:maxImageSize="30dp" />
 
@@ -155,28 +122,27 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_gravity="bottom"
             android:layout_marginTop="40dp"
+            android:layout_gravity="bottom"
 
             >
-
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/nav_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="0dp"
-                android:background="#FF577F"
                 android:foregroundGravity="bottom"
-                android:padding="0dp"
                 app:itemIconSize="30dp"
+                android:background="#FF577F"
                 app:itemIconTint="#FFFFFF"
+                android:padding="0dp"
                 app:menu="@menu/bottom_app_bar" />
 
         </FrameLayout>
 
 
+
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
