--- a/app/src/main/res/layout/list_bars.xml
+++ b/app/src/main/res/layout/list_bars.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="175dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/imgfg" />
+            android:src="@drawable/img_bar_basic" />
 
     <LinearLayout
         android:layout_width="match_parent"
