--- a/app/src/main/res/layout/list_bars_customer_side.xml
+++ b/app/src/main/res/layout/list_bars_customer_side.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/imgfg" />
+            android:src="@drawable/img_bar_basic" />
 
     <LinearLayout
         android:layout_width="match_parent"
