--- a/app/src/main/res/layout/activity_bar_tables.xml
+++ b/app/src/main/res/layout/activity_bar_tables.xml
@@ -210,8 +210,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="25dp"
+            android:visibility="invisible"
+            />
 
     </LinearLayout>
     </ScrollView>
@@ -223,7 +227,7 @@
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
             android:layout_width="match_parent"
-            android:layout_height="75dp"
+            android:layout_height="50dp"
             android:layout_gravity="bottom"
             app:backgroundTint="@color/white"
             app:fabAlignmentMode="center"
