--- a/app/src/main/res/layout/dialog_show_followers.xml
+++ b/app/src/main/res/layout/dialog_show_followers.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
-    android:background="#FAF9F9"
-    tools:context=".activities.business_account.Activity_create_bar">
+    android:layout_height="match_parent"
+    tools:ignore="MissingDefaultResource">
 
-
-
-    <ScrollView
-        android:id="@+id/scroll"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
-        >
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="30dp"
+        app:cardCornerRadius="11dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ScrollView
+            android:id="@+id/scroll"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -34,6 +43,7 @@
                     android:textColor="#555B6E"
                     android:textSize="19sp"
                     android:textStyle="bold" />
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
@@ -41,12 +51,10 @@
                     android:background="#6CA19C9C" />
 
 
-
-
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/showFollowers_LST_followers"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="300dp"
                     android:layout_margin="5dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +65,7 @@
             </LinearLayout>
 
 
-    </ScrollView>
+        </ScrollView>
 
-
-</RelativeLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
