--- a/app/src/main/res/layout/activity_private_account_profile.xml
+++ b/app/src/main/res/layout/activity_private_account_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,11 +28,12 @@
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp">
+        android:layout_marginBottom="50dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="30dp">
 
             <TextView
                 android:id="@+id/profile_LBL_title"
@@ -86,10 +86,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/profile_FRM"
-                android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginBottom="20dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical">
 
                 <com.google.android.material.textview.MaterialTextView
@@ -157,24 +157,134 @@
                         android:textSize="17sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/profile_TIL_addressCity"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/comfortaa_bold"
+                    android:hint="City"
+                    android:textColorHint="#555B6E"
+                    app:boxStrokeColor="#555B6E"
+                    app:boxStrokeWidth="2dp"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="15"
+                    app:errorEnabled="true"
+                    app:hintTextColor="#555B6E">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/profile_TIETL_addressCity"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="30"
+                        android:fontFamily="@font/comfortaa_bold"
+                        android:imeOptions="actionDone"
+                        android:maxLength="15"
+                        android:outlineAmbientShadowColor="#555B6E"
+                        android:shadowColor="#555B6E"
+                        android:textColor="#555B6E" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/profile_TIL_addressStreet"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/comfortaa_bold"
+                        android:hint="Street"
+                        android:textColorHint="#555B6E"
+                        app:boxStrokeColor="#555B6E"
+                        app:boxStrokeWidth="2dp"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="15"
+                        app:errorEnabled="true"
+                        app:hintTextColor="#555B6E">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/profile_TIETL_addressStreet"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ems="30"
+                            android:fontFamily="@font/comfortaa_bold"
+                            android:imeOptions="actionDone"
+                            android:maxLength="15"
+                            android:outlineAmbientShadowColor="#555B6E"
+                            android:shadowColor="#555B6E"
+                            android:textColor="#555B6E" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/profile_TIL_addressNum"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.7"
+                        android:fontFamily="@font/comfortaa_bold"
+                        android:hint="Num"
+                        android:textColorHint="#555B6E"
+                        app:boxStrokeColor="#555B6E"
+                        app:boxStrokeWidth="2dp"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="3"
+                        app:errorEnabled="true"
+                        app:hintTextColor="#555B6E">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/profile_TIETL_addressNum"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:digits="123456789"
+                            android:ems="30"
+                            android:fontFamily="@font/comfortaa_bold"
+                            android:imeOptions="actionDone"
+                            android:inputType="number"
+                            android:maxLength="3"
+                            android:outlineAmbientShadowColor="#555B6E"
+                            android:shadowColor="#555B6E"
+                            android:textColor="#555B6E" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+
+                </LinearLayout>
+
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/profile_BTN_create"
                     android:layout_width="120dp"
                     android:layout_height="50dp"
-                    android:layout_marginTop="20dp"
                     android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
                     android:layout_marginBottom="10dp"
-                    android:fontFamily="@font/comfortaa_bold"
                     android:backgroundTint="#555B6E"
+                    android:fontFamily="@font/comfortaa_bold"
                     android:text="Save"
-                    app:checkedIconTint="@color/white"
                     android:textColor="#FAF9F9"
                     android:textSize="15sp"
+                    app:checkedIconTint="@color/white"
                     app:cornerRadius="20dp" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="25dp"
+                    android:visibility="invisible"
+                    />
 
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
+
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -182,15 +292,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="?attr/actionBarSize">
+
         <com.google.android.material.bottomappbar.BottomAppBar
             android:id="@+id/bottom_app_bar"
             android:layout_width="match_parent"
             android:layout_height="75dp"
             android:layout_gravity="bottom"
             app:fabAlignmentMode="center"
-            app:fabCradleRoundedCornerRadius="50dp"
             app:fabCradleMargin="1dp"
-            />
+            app:fabCradleRoundedCornerRadius="50dp" />
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -198,8 +308,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#FF577F"
-            app:borderWidth="0dp"
             android:src="@drawable/ic_search"
+            app:borderWidth="0dp"
             app:layout_anchor="@id/bottom_app_bar"
             app:maxImageSize="30dp" />
 
@@ -207,25 +317,25 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginTop="40dp"
             android:layout_gravity="bottom"
+            android:layout_marginTop="40dp"
 
             >
+
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/nav_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="0dp"
-                android:foregroundGravity="bottom"
-                app:itemIconSize="30dp"
                 android:background="#FF577F"
-                app:itemIconTint="#FFFFFF"
+                android:foregroundGravity="bottom"
                 android:padding="0dp"
+                app:itemIconSize="30dp"
+                app:itemIconTint="#FFFFFF"
                 app:menu="@menu/bottom_app_bar" />
 
         </FrameLayout>
-
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
