--- a/app/src/main/res/layout/customer_main_page.xml
+++ b/app/src/main/res/layout/customer_main_page.xml
@@ -124,7 +124,8 @@
         </ScrollView>
     </LinearLayout>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/container"
         android:layout_width="match_parent"
