--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -34,7 +34,7 @@
                 android:layout_marginBottom="10dp"
                 android:drawableStart="@drawable/ic_menu"
                 android:drawablePadding="10dp"
-                android:text="yao cho"
+                android:text="Menu"
                 android:textColor="#555B6E"
                 android:textSize="19sp"
                 android:textStyle="bold" />
